[1192] Add ConnectionDefinition in General View diagram
Bug: https://github.com/eclipse-syson/syson/issues/1192
Signed-off-by: Glenn Plouhinec <glenn.plouhinec@obeo.fr>

--- a/doc/content/modules/user-manual/pages/release-notes/2025.4.0.adoc
+++ b/doc/content/modules/user-manual/pages/release-notes/2025.4.0.adoc
@@ -415,6 +415,10 @@ This template is visible on the home page (like SysMlv2 and Batmobile templates)
 }
 ```
 
+- In _General View_ diagram, `ConnectionDefinition` are now represented as nodes.
+
+image::connection-definition-nodes.png[Connection Definition nodes, width=60%,height=60%]
+
 == Dependency update
 
 - Switch to https://github.com/spring-projects/spring-boot/releases/tag/v3.4.4[Spring Boot 3.4.4].
