--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -170,6 +170,7 @@ This was not possible for libraries containing `LibraryPackage` instances, which
 - https://github.com/eclipse-syson/syson/issues/1152[#1152] [general-view] Add `TextualRepresentation` in General View diagram.
 - https://github.com/eclipse-syson/syson/issues/1177[#1177] [syson] Add new SysMLv2 Library template allowing to create a project composed with a simple model with only one element: a `LibraryPackage`.
 - https://github.com/eclipse-syson/syson/issues/1162[#1162] [export] Implement textual export of `TextualRepresentation`.
+- https://github.com/eclipse-syson/syson/issues/1192[#1192] [general-view] Add `ConnectionDefinition` in General View diagram
 
 === New features
 
